--- a/Blazor.ECommerce/appsettings.json
+++ b/Blazor.ECommerce/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BlazorECommerce;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=BlazorECommerce;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DetailedErrors":  true,
 }
